--- a/doc/midterm/problem3.tex
+++ b/doc/midterm/problem3.tex
@@ -210,7 +210,7 @@ The average word in English is $\lambda =5.1$ letters.
     Since this is a polynomial with even degree and positive leading coefficient, $a^{2\times 26 + 2} = a^{54}$, the
     opening of the polynomial should be upward and it should have at least one global minimum.
 
-    The first and second derivative of (\ref{eq:prob3c:f}) are:
+    With first and second derivative of (\ref{eq:prob3c:f}):
     \begin{align*}
       \df{d}{da}\left(\sum_{x=0}^{26} \left| p(x) -  q(x) \right|^2\right)
       & = \sum_{x=1}^{26} \left( (2x+2)a^{2x+1} - (4x+2)a^{2x} + 2xa^{2x-1}\right) \\
@@ -221,7 +221,11 @@ The average word in English is $\lambda =5.1$ letters.
       & \quad  + \sum_{x=2}^{26} \left( x(x+1)2\df{C_xB_x}{B} a^{x-1} - x(x-1)2\df{C_xB_x}{B} a^{x-2}\right) \\
       & \quad + 12a^2 - 12a + 2 + \df{4C_1B_1}{B} + 2
     \end{align*}
-
+    we can numerically find the global minimum(s) with Newton's
+    method\footnote{\url{https://en.wikipedia.org/wiki/Newton\%27s_method}}. Code used for newton's method is shown
+    in listing
+    \SourceCode{clojure}{Functions for using newton's method}{lst:newton}{../../src/elc5370/optimization.clj}
+    \SourceCode{clojure}{Functions for beta binomial distribution}{lst:newton}{../../src/elc5370/binomial.clj}
     % \begin{align*}
     %   & = (a - 1)^2\sum_{x=0}^{26} 2xa^{2x-1} + \df{1}{B}\sum_{x=0}^{26} \left(2C_xB_x(x+1)a^{x} - 2C_xB_xxa^{x-1}\right)
     % \end{align*}
