--- a/doc/midterm/problem5.tex
+++ b/doc/midterm/problem5.tex
@@ -13,10 +13,39 @@ Assuming there are about a million words in the English language.
 \item What is the probability of generating a word in the English language randomly choosing letters
   \begin{itemize}
   \item assuming the letters are chosen uniformly.
-  \item assuming the letters are chosen according to $p(x)$.\footnote{
-      See Problem~\ref{SquishyBear}.
-    }
+  \item assuming the letters are chosen according to $p(x)$.\footnote{See Problem~\ref{SquishyBear}.}
   \end{itemize}
+  \textbf{Solution:} \\
+  \begin{align*}
+    \text{Let} \quad & \begin{cases}
+      L & = \text{probability of generating sequence of non-space characters} \\
+      W & = \text{probability of generating an English word} \\
+      N & = \text{total number of English words}
+    \end{cases}
+  \end{align*}
+  \begin{align*}
+    % w(k) & = P(L=k | W) \\
+    P(W) & = \sum_k P(W \cap L_k) = \sum_k P(W|L=k)P(L=k) \\
+    P(L=k) & = (1 - \Pr\{\text{space}\})^{k}\Pr\{\text{space}\}\\
+    P(W|L=k) & = \df{w(k) * N}{26^k} \\
+    P(W) & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} (1 - \Pr\{\text{space}\})^{k}\Pr\{\text{space}\}\right)
+  \end{align*}
+  So,
+  \begin{itemize}
+    \item If letters are chosen uniformly,
+      $$P(W) = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} \left(\df{26}{27}\right)^{k}\df{1}{27}\right)
+      = \sum_{k=2}^{N} \left(\df{w(k) * N}{27^{k+1}} \right)$$
+    \item If letters are chosen according to $p(x)$,
+      \begin{align*}
+        P(W) & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} (1 - p(0))^{k}p(0)\right) \\
+        P(W) & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k}
+               \left(1 - (1-\alpha)\alpha^0\right)^{k}(1-\alpha)\alpha^0\right) \\
+             & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} \alpha^{k}(1-\alpha)\right) \\
+             & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} p(k)\right)
+      \end{align*}
+
+  \end{itemize}
+
 \item What is the probability of randomly generating $W$ words in a row under each distribution?
 \item How many times must we randomly sample before getting $W$ words in a row under each distribution?
 \item If a word is $w_k$ characters long (including a space at the end), assume it requires $k \log_2 N$ bits to form. How many bits do we use, on average, to query to the point we have $W$ words in a row?
