--- a/doc/midterm/problem5.tex
+++ b/doc/midterm/problem5.tex
@@ -43,8 +43,11 @@ Assuming there are about a million words in the English language.
              & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} \alpha^{k}(1-\alpha)\right) \\
              & = \sum_{k=2}^{N} \left(\df{w(k) * N}{26^k} p(k)\right)
       \end{align*}
-
   \end{itemize}
+  % \url{http://www.languagemonitor.com/number-of-words/number-of-words-in-the-english-language-1008879/}
+  According to \url{http://www.languagemonitor.com}, $N \approx 1,025,109$
+
+  4 letters non words \url{http://www.appsapps.info/stuff/notwords4.txt}
 
 \item What is the probability of randomly generating $W$ words in a row under each distribution?
 \item How many times must we randomly sample before getting $W$ words in a row under each distribution?
@@ -52,4 +55,5 @@ Assuming there are about a million words in the English language.
 \end{enumerate}
 
 \end{document}
+
 
