midterm submission clean up

--- a/doc/midterm/problem2.tex
+++ b/doc/midterm/problem2.tex
@@ -56,7 +56,7 @@ Assume $\Pr [X=0] =\pi $ where $\pi$ is some probability.
     & \quad - (1 - q) \log (1- q) - q \log q+ p \log p + (1 - p) \log (1 - p) \\
     & = -(1-q-p)\log (p + \pi (1 - q - p)) \\
     & \quad - (q + p - 1)\log (1 - p + \pi (q + p - 1)) \\
-    & \quad - (1 - q) \log (1- q) - q \log q+ p \log p + (1 - p) \log (1 - p)
+    & \quad - (1 - q) \log (1- q) - q \log q+ p \log p + (1 - p) \log (1 - p) = 0
   \end{align*}
 \end{enumerate}
 
