--- a/doc/midterm/problem3.tex
+++ b/doc/midterm/problem3.tex
@@ -70,7 +70,7 @@ The average word in English is $\lambda =5.1$ letters.
     make beta-binomial distribution a better fit.
     \begin{figure}[!h]
       \centering
-      \includegraphics[width=5in]{pics/beta_binomial_fit.eps}
+      \includegraphics[width=5in]{pics/beta_binomial_exp_fit.eps}
       \caption{Beta-binomial pmf fitting with $n=26, \alpha=0.68, \beta=2.7$}
       \label{fig:beta-binomial-fit}
     \end{figure}
